Mistakes has been corrected

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Каталог</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header class="page-header">
@@ -15,23 +16,21 @@
           <li class="navigation-item">
             <a class="navigation-link current-link" href="catalog.html">Каталог</a>
             <div class="popover popover-catalog">
+              <h3 class="new-catalog-popover-title">Новинки</h3>
               <ul class="popover-catalog-list">
-                <li class="popover-catalog-item">
-                  <a class="popover-catalog-link new" href="#">Новинки</a>
-                </li>
-                <li class="popover-catalog-item">
-                  <a class="popover-catalog-link " href="#">Сливочное</a>
-                </li>
-                <li class="popover-catalog-item">
-                  <a class="popover-catalog-link" href="#">Щербеты</a>
-                </li>
-                <li class="popover-catalog-item">
-                  <a class="popover-catalog-link" href="#">Фруктовый лед</a>
-                </li>
-                <li class="popover-catalog-item">
-                  <a class="popover-catalog-link" href="#">Мелорин</a>
-                </li>
-              </ul>
+                    <li class="popover-catalog-item">
+                      <a class="popover-catalog-link " href="#">Сливочное</a>
+                    </li>
+                    <li class="popover-catalog-item">
+                      <a class="popover-catalog-link" href="#">Щербеты</a>
+                    </li>
+                    <li class="popover-catalog-item">
+                      <a class="popover-catalog-link" href="#">Фруктовый лед</a>
+                    </li>
+                    <li class="popover-catalog-item">
+                      <a class="popover-catalog-link" href="#">Мелорин</a>
+                    </li>
+                </ul>
             </div>
           </li>
           <li class="navigation-item">
@@ -84,7 +83,7 @@
             <h1 class="inner-header-title"><span class="visually-hidden">Каталог</span></h1>
             <ul class="breadcrumbs">
                 <li class="breadcrumbs-item">
-                    <a class="breadcrumbs-link" href="index.html">Главная</a>
+                    <a class="breadcrumbs-link prev-page" href="index.html">Главная</a>
                 </li>
                 <li class="breadcrumbs-item">
                     <a class="breadcrumbs-link decoration">Каталог</a>
@@ -165,35 +164,35 @@
                   <li class="filler-item">
                       <label class="control">
                           <input class="visually-hidden control-input" type="checkbox" name="chokolate" checked>
-                          <span class="control-mark"></span>
+                          <span class="control-mark-checkbox"></span>
                           <span class="control-label">шоколадные</span>
                       </label>
                   </li>
                   <li class="filler-item">
                       <label class="control">
                           <input class="visually-hidden control-input" type="checkbox" name="sugar" checked>
-                          <span class="control-mark"></span>
+                          <span class="control-mark-checkbox"></span>
                           <span class="control-label">сахарные посыпки</span>
                       </label>
                   </li>
                   <li class="filler-item">
                       <label class="control">
                           <input class="visually-hidden control-input" type="checkbox" name="fruits">
-                          <span class="control-mark"></span>
+                          <span class="control-mark-checkbox"></span>
                           <span class="control-label">фрукты</span>
                       </label>
                   </li>
                   <li class="filler-item">
                       <label class="control">
                           <input class="visually-hidden control-input" type="checkbox" name="toppings">
-                          <span class="control-mark"></span>
+                          <span class="control-mark-checkbox"></span>
                           <span class="control-label">сиропы</span>
                       </label>
                   </li>
                   <li class="filler-item">
                       <label class="control">
                           <input class="visually-hidden control-input" type="checkbox" name="jam">
-                          <span class="control-mark"></span>
+                          <span class="control-mark-checkbox"></span>
                           <span class="control-label">джемы</span>
                       </label>
                   </li>
