--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
       <li class="navigation-item">
         <a class="navigation-link" href="catalog.html">Каталог</a>
         <div class="popover popover-catalog">
+              <h3 class="new-catalog-popover-title">Новинки</h3>
           <ul class="popover-catalog-list">
-            <li class="popover-catalog-item">
-              <a class="popover-catalog-link new" href="#">Новинки</a>
-            </li>
             <li class="popover-catalog-item">
               <a class="popover-catalog-link " href="#">Сливочное</a>
             </li>
@@ -84,11 +82,12 @@
       </li>
       <li class="navigation-item">
         <a class="navigation-link navigation-link-cart" href="#"> 
-          <svg class="navigation-icon" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#2D3440"/>
-          </svg>
-         2 товара
-          <span class="visually-hidden">Корзина</span>
+            <svg class="navigation-icon" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#2D3440"/>
+            </svg>
+          2 товара
+            <span class="visually-hidden">Корзина</span>
+        </a>
           <div class="popover popover-cart-empty">
             <span class="popover-cart-empty-text">Ваша корзина пока пуста</span>
           </div>
@@ -102,20 +101,20 @@
                     <span class="popover-cart-product-price">1 кг х 310 ₽</span>
                   </div>
                   <p class="popover-price">310 ₽</p>
-                  <button class="popover-cart-close-button">
+                  <button class="popover-cart-close-button" type="button">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z" fill="#2D3440"/>
                     </svg>
                   </button>
                 </li>
                 <li class="popover-cart-item">
-                  <img src="image/card/buble-gum_small.png" width="46" height="46" alt="Мороженное со вкусом жвачки.">
+                  <img class="popover-cart-image" src="image/card/buble-gum_small.png" width="46" height="46" alt="Мороженное со вкусом жвачки.">
                   <div class="popover-cart-discription">
                     <span class="popover-cart-product">Бабл-гам</span>
                     <span class="popover-cart-product-price">1,5 кг х 320 ₽</span>
                   </div>
                   <p class="popover-price">480 ₽</p>
-                  <button class="popover-cart-close-button">
+                  <button class="popover-cart-close-button" type="button">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z" fill="#2D3440"/>
                     </svg>
@@ -127,7 +126,7 @@
             <span class="cart-summ">Итого: 790 ₽</span>
           </div>
           </div>
-        </a>
+        
       </li>
     </ul>
   </nav>
