Comments were fixed

--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
             <a class="navigation-link" href="about.html">О компании</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-user">
+        <ul class="navigation-list navigation-user navigation-catalog">
           <li class="navigation-item">
             <a class="phone" href="tel:+78005558628">+7 800 555-86-28</a>
           </li>
@@ -205,7 +205,7 @@
           <ul class="catalog-list">
             <li class="catalog-item">   
               <article class="catalog-card-content">  
-                <img class="catalog-item-image" src="image/card/raspberry.png" width="168" height="168" alt="Малинка.">
+                <img class="catalog-item-image" src="image/card/raspberry.png" width="180" height="180" alt="Малинка.">
                 <h3 class="catalog-item-title">Малинка</h3>
                 <p class="catalog-description">Сливочное мороженое с малиновым джемом</p>
                 <div class="catalog-footer">
@@ -219,7 +219,7 @@
                 </li>
           <li class="catalog-item">
             <article class="catalog-card-content">
-              <img class="catalog-item-image" src="image/card/pistachio.png" width="168" height="168" alt="Фисташка.">
+              <img class="catalog-item-image" src="image/card/pistachio.png" width="180" height="180" alt="Фисташка.">
               <h3 class="catalog-item-title">Фисташка</h3>
               <p class="catalog-description">Фисташковый пломбир с кусочками шоколада</p>
               <div class="catalog-footer">
@@ -233,7 +233,7 @@
           </li>
           <li class="catalog-item">
             <article class="catalog-card-content">
-              <img class="catalog-item-image" src="image/card/blueberry.png" width="168" height="168" alt="Черника.">
+              <img class="catalog-item-image" src="image/card/blueberry.png" width="180" height="180" alt="Черника.">
               <h3 class="catalog-item-title">Черника</h3>
               <p class="catalog-description">Крем-брюле с черничным джемом</p>
               <div class="catalog-footer">
@@ -247,7 +247,7 @@
           </li>
           <li class="catalog-item">
             <article class="catalog-card-content">
-              <img class="catalog-item-image" src="image/card/buble-gum.png" width="168" height="168" alt="Бабл-гам.">
+              <img class="catalog-item-image" src="image/card/buble-gum.png" width="180" height="180" alt="Бабл-гам.">
               <h3 class="catalog-item-title">Бабл-гам</h3>
               <p class="catalog-description">Ванильный пломбир со сладкой посыпкой</p>
               <div class="catalog-footer">
@@ -261,7 +261,7 @@
           </li>
         <li class="catalog-item">
               <article class="catalog-card-content">
-                <img class="catalog-item-image" src="image/card/blackberry.png" width="168" height="168" alt="Ежевика.">
+                <img class="catalog-item-image" src="image/card/blackberry.png" width="180" height="180" alt="Ежевика.">
                 <h3 class="catalog-item-title">Ежевика</h3>
                 <p class="catalog-description">Сливочное мороженое с ежевичным джемом</p>
                 <div class="catalog-footer">
@@ -275,7 +275,7 @@
           </li>
     <li class="catalog-item">
         <article class="catalog-card-content">
-          <img class="catalog-item-image" src="image/card/banana.png" width="168" height="168" alt="Банан.">
+          <img class="catalog-item-image" src="image/card/banana.png" width="180" height="180" alt="Банан.">
           <h3 class="catalog-item-title">Банан</h3>
           <p class="catalog-description">Сливочный пломбир с банановым вкусом</p>
           <div class="catalog-footer">
@@ -289,7 +289,7 @@
       </li>
     <li class="catalog-item">
         <article class="catalog-card-content">
-          <img class="catalog-item-image" src="image/card/chocolate.png" width="168" height="168" alt="Шоколадка.">
+          <img class="catalog-item-image" src="image/card/chocolate.png" width="180" height="180" alt="Шоколадка.">
           <h3 class="catalog-item-title">Шоколадка</h3>
           <p class="catalog-description">Классический шоколадный пломбир</p>
           <div class="catalog-footer">
@@ -303,7 +303,7 @@
       </li>
     <li class="catalog-item">
        <article class="catalog-card-content">
-        <img class="catalog-item-image" src="image/card/strawberry.png" width="168" height="168" alt="Клубничка.">
+        <img class="catalog-item-image" src="image/card/strawberry.png" width="180" height="180" alt="Клубничка.">
           <h3 class="catalog-item-title">Клубничка</h3>
           <p class="catalog-description">Сливочный пломбир с клубничным вкусом</p>
           <div class="catalog-footer">
@@ -317,7 +317,7 @@
       </li>
     <li class="catalog-item">
         <article class="catalog-card-content">
-          <img class="catalog-item-image" src="image/card/lemon.png" width="168" height="168" alt="Лимон.">
+          <img class="catalog-item-image" src="image/card/lemon.png" width="180" height="180" alt="Лимон.">
           <h3 class="catalog-item-title">Лимон</h3>
           <p class="catalog-description">Освежающий лимонный сорбет</p>
           <div class="catalog-footer">
@@ -331,7 +331,7 @@
       </li>
     <li class="catalog-item">
         <article class="catalog-card-content">
-          <img class="catalog-item-image" src="image/card/menthol.png" width="168" height="168" alt="Ментол.">
+          <img class="catalog-item-image" src="image/card/menthol.png" width="180" height="180" alt="Ментол.">
           <h3 class="catalog-item-title">Ментол</h3>
           <p class="catalog-description">Сливочный пломбир с ментоловым сиропом</p>
           <div class="catalog-footer">
@@ -345,7 +345,7 @@
       </li>
     <li class="catalog-item">
           <article class="catalog-card-content">
-            <img class="catalog-item-image" src="image/card/nut.png" width="168" height="168" alt="Орешек.">
+            <img class="catalog-item-image" src="image/card/nut.png" width="180" height="180" alt="Орешек.">
            <h3 class="catalog-item-title">Орешек</h3>
             <p class="catalog-description">Фисташковый пломбир с шоколадным сиропом</p>
             <div class="catalog-footer">
@@ -359,7 +359,7 @@
       </li>
         <li class="catalog-item">
           <article class="catalog-card-content">
-            <img class="catalog-item-image" src="image/card/creme_brulee.png" width="168" height="168" alt="Крем-брюле.">
+            <img class="catalog-item-image" src="image/card/creme_brulee.png" width="180" height="180" alt="Крем-брюле.">
             <h3 class="catalog-item-title">Крем-брюле</h3>
             <p class="catalog-description">Классическое крем-брюле</p>
             <div class="catalog-footer">
@@ -413,7 +413,7 @@
       </main>
       <footer class="page-footer">
         <div class="page-footer-container">
-              <section class="footer-social">
+              <section class="footer-social footer-social-catalog">
                 <ul class="footer-social-list">
                   <li class="footer-social-item">
                     <a class="footer-social-link" href="https://t.me/htmlacademy">
@@ -444,32 +444,26 @@
                   </li>
                 </ul>
               </section>
-          <section class="cooperation">
+          <section class="cooperation ">
             <ul class="cooperation-list">
               <li class="cooperation-item">
-                <a class="cooperation-link" href="#">
+                <a class="cooperation-link link-with-icon" href="#">
                 <svg class="heart-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.9 3a3.67 3.67 0 0 0-5.2 0l-.7.7-.7-.7a3.67 3.67 0 0 0-5.2 5.18l.71.7L8 14.09l5.18-5.2.71-.7a3.67 3.67 0 0 0 0-5.19Z" fill="#2D3440"/></svg>
-                Для производителей
+                Для поставщиков
               </a>
               </li>
               <li class="cooperation-item">
-                <a class="cooperation-link" href="#">
-                  <svg class="heart-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.9 3a3.67 3.67 0 0 0-5.2 0l-.7.7-.7-.7a3.67 3.67 0 0 0-5.2 5.18l.71.7L8 14.09l5.18-5.2.71-.7a3.67 3.67 0 0 0 0-5.19Z" fill="#2D3440"/></svg>
-                  О производстве</a>
+                <a class="cooperation-link" href="#">Наши документы</a>
               </li>
               <li class="cooperation-item">
-                <a class="cooperation-link" href="#">
-                <svg class="heart-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.9 3a3.67 3.67 0 0 0-5.2 0l-.7.7-.7-.7a3.67 3.67 0 0 0-5.2 5.18l.71.7L8 14.09l5.18-5.2.71-.7a3.67 3.67 0 0 0 0-5.19Z" fill="#2D3440"/></svg>
-                Наши документы</a>
+                <a class="cooperation-link" href="#"> О производстве</a>
               </li>
               <li class="cooperation-item">
-                <a class="cooperation-link" href="#">
-                <svg class="heart-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.9 3a3.67 3.67 0 0 0-5.2 0l-.7.7-.7-.7a3.67 3.67 0 0 0-5.2 5.18l.71.7L8 14.09l5.18-5.2.71-.7a3.67 3.67 0 0 0 0-5.19Z" fill="#2D3440"/></svg>
-                Экологические стандарты</a>
+                <a class="cooperation-link" href="#">Экологические стандарты</a> 
               </li>
             </ul>
           </section>
-          <section class="copyrights">
+          <section class="copyrights copyrights-catalog">
             <img class="copyright-logo" src="image\logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии">
             <p class="copyright-text">Сделано в <a class="copyright-link" href="https://htmlacademy.ru/">.html academy</a> © 2021</p>
             </section>
