--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="page-header">
   <nav class="navigation">
     <a class="navigation-logo">
-      <img class="page-header-logo" src="image/logo.svg" width=137px height=56px alt="Логотип фирмы Глейси.">
+      <img class="page-header-logo" src="image/logo.svg" width="137" height="56" alt="Логотип фирмы Глейси.">
     </a>
     <ul class="navigation-list">
       <li class="navigation-item">
@@ -37,7 +37,7 @@
         <a class="navigation-link" href="delivery-payment.html">Доставка и оплата</a>
       </li>
       <li class="navigation-item">
-        <a class="navigation-link" href="about.html">О компании</a>
+        <a class="navigation-link about-company" href="about.html">О компании</a>
       </li>
     </ul>
     <ul class="navigation-list navigation-user">
@@ -49,13 +49,13 @@
           <svg class="navigation-icon" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z" fill="#2D3440"/>
           </svg>
+        </a>
           <span class="visually-hidden">Поиск</span>
           <div class="popover popover-search">
             <form class="popover-form" method="GET" action="https://echo.htmlacademy.ru/">
               <input class="field popover-field" type="text" placeholder="Поиск по сайту">
             </form>
           </div>
-        </a>
       </li>
       <li class="navigation-item">
         <a class="navigation-link navigation-link-login" href="#">
@@ -267,7 +267,7 @@
         <article class="catalog-card-content-popular">
           <img class="catalog-item-image-popular" src="image/card/blueberry.png" width="180" height="180" alt="Черника.">
           <h3 class="catalog-item-title-popular">Черника</h3>
-          <p class="catalog-description-popular">Крем-брюле с черничным джемом</p>
+          <p class="catalog-description-popular">Крем-брюле<br> счерничным джемом</p>
           <div class="catalog-footer-popular">
             <b class="price-popular">330 ₽/кг</b>
             <a class="add-to-cart-link" href="#"><span class="visually-hidden">В корзину</span>
@@ -281,7 +281,7 @@
         <article class="catalog-card-content-popular">
           <img class="catalog-item-image-popular" src="image/card/buble-gum.png" width="180" height="180" alt="Бабл-гам.">
           <h3 class="catalog-item-title-popular">Бабл-гам</h3>
-          <p class="catalog-description-popular">Ванильный пломбир со сладкой посыпкой</p>
+          <p class="catalog-description-popular">Ванильный пломбир <br> сосладкой посыпкой</p>
           <div class="catalog-footer-popular">
             <b class="price-popular">320 ₽/кг</b>
             <a class="add-to-cart-link" href="#"><span class="visually-hidden">В корзину</span>
@@ -295,34 +295,34 @@
   </section>
   <section class="benefits">
       <div class="benefits-container">
-        <h2 class="benefits-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-        <ul class="benefits-list">
-          <li class="benefit-one">
-            <svg class=" benefit-one-image" aria-hidden="true" focusable="false" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="24" r="23" stroke="#2D3440" stroke-width="2"/>
-            <path d="M24 8a8 8 0 0 0-7.94 7.06H16v15.89h16v-15.9h-.06A8 8 0 0 0 24 8Zm6.12 21.06H17.88V20.4a1.68 1.68 0 0 0 1.45.6c1.22 0 2-.68 2-1.54v-.81a.8.8 0 1 1 1.62 0v3.1a1.76 1.76 0 0 0 2 1.71 1.75 1.75 0 0 0 1.99-1.64v-2.08a1.27 1.27 0 1 1 2.53 0v.08a1.06 1.06 0 0 0 .63.84v8.47l.02-.06ZM22.59 38.59a1.41 1.41 0 0 0 2.82 0v-6.7H22.6v6.7Z" fill="#2D3440"/>
-          </svg>
-          <span>Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</span>
-        </li>
-          <li class="benefit-two">
-            <svg class="benefit-two-image" aria-hidden="true" focusable="false" width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24.5" cy="24" r="23" stroke="#2D3440" stroke-width="2"/><g clip-path="url(#a)">
-              <path d="M35.25 18.29a12.1 12.1 0 0 0 .46-9.56 1 1 0 0 0-.34-.47 1.06 1.06 0 0 0-1.57.3c-1.32 2.28-4.16 5.96-6.24 6.13h-.1c-.95-.18-1.92-.28-2.9-.3-.98.02-1.95.12-2.91.3h-.07c-2.09-.16-4.97-3.84-6.3-6.13-.1-.18-.24-.33-.42-.43a1.07 1.07 0 0 0-1.18.1 1 1 0 0 0-.33.5 12 12 0 0 0 .4 9.55c-1.81.22-4.1.78-4.94 2.2a2.15 2.15 0 0 0 0 2.22c.24.4.6.74 1.02.97.43.22.92.32 1.4.28a7.57 7.57 0 0 0 2.52-.48c0 .54.04 1.09.14 1.62a34.44 34.44 0 0 0 1.82 5.24c.2.47.41 1 .53 1.32-.34.81-.61 1.65-.8 2.5a4.32 4.32 0 0 0 1.16 3.33c1.51 1.67 4.16 2.52 7.93 2.52 3.77 0 6.43-.85 7.93-2.52a4.39 4.39 0 0 0 1.17-3.33c-.2-.85-.46-1.69-.8-2.5l.53-1.32c.75-1.7 1.36-3.45 1.82-5.24.1-.53.15-1.08.14-1.62.78.3 1.6.46 2.44.48a2.54 2.54 0 0 0 2.43-1.26 2.15 2.15 0 0 0 0-2.2c-.82-1.38-3.12-1.98-4.94-2.2Zm-.99-6.69c.38 2.1 0 4.27-1.04 6.15a7.49 7.49 0 0 0-2.82-2.14c1.5-1.13 2.8-2.48 3.86-4Zm-19.47 0a16.96 16.96 0 0 0 3.85 4.03c-.73.3-1.4.74-1.96 1.27-.3.27-.58.57-.85.87a9.28 9.28 0 0 1-1.04-6.17Zm-4.1 10.13c-.1-.16-.06-.21 0-.25.24-.4 1.45-1 3.76-1.24-.12.3-.22.58-.31.89-1.36.67-3.17 1.1-3.45.6Zm22.44 3.02a33.3 33.3 0 0 1-1.69 4.84c-.27.62-.51 1.25-.72 1.88l-.06.32.11.28c.33.77.6 1.56.8 2.36a2.33 2.33 0 0 1-.67 1.73C30.15 37 28.44 38 24.54 38c-3.9 0-5.6-1.01-6.36-1.83-.45-.47-.69-1.09-.67-1.73.2-.8.48-1.6.8-2.36l.12-.28-.07-.32c-.2-.64-.43-1.27-.7-1.89-.7-1.58-1.28-3.2-1.71-4.87a7 7 0 0 1 2.2-6.4c1.57-1.53 5.13-1.88 6.37-1.89 1.24 0 4.73.35 6.39 1.9.88.81 1.55 1.82 1.93 2.93.4 1.11.49 2.3.29 3.46v.04Zm5.2-3.02c-.27.48-2.08.07-3.37-.6-.09-.3-.19-.59-.3-.89 2.29.23 3.48.85 3.71 1.24.05.04.07.09-.02.25h-.02Z" fill="#2D3440"/></g><defs><clipPath id="a"><path fill="#fff" transform="translate(8.5 8)" d="M0 0h32v32H0z"/></clipPath></defs>
-            </svg>
-            <span>Закупка ингредиентов производится только <br> у проверенных фермерских хозяйств, с которыми <br> нас связывает долговременное сотрудничество.</span>
-          </li>
-          <li class="benefit-three">
-            <svg class="benefit-three-image" aria-hidden="true" focusable="false" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="24" r="23" stroke="#2D3440" stroke-width="2"/>
-              <path d="M33.32 26.49c-.4-9.08-8.31-17.87-8.66-18.25h-.05l-.1-.13-.12-.07h-.51L23.71 8h-.05l-.16.11-.1.1h-.04c-.36.41-8.27 9.2-8.69 18.28v1.24c.34 9.84 9.04 12.24 9.11 12.26h.45c.08 0 8.77-2.47 9.1-12.26v-1.24Zm-16.26-3.36a22.23 22.23 0 0 0 6.04 3.93v4.34c-2.21-1.15-5.62-3.2-6.62-5.01.08-1.1.26-2.2.55-3.26h.03Zm1.8-4.87a11.1 11.1 0 0 0 4.24 2.92v3.77c-2.02-.9-3.86-2.2-5.42-3.82.34-.98.74-1.94 1.18-2.87Zm11.5 2.87a17.3 17.3 0 0 1-5.43 3.82v-3.77c1.6-.62 3.03-1.62 4.2-2.92.46.92.86 1.86 1.22 2.83v.04Zm-5.43-1.97v-7.64a43.22 43.22 0 0 1 3.3 4.94 8.28 8.28 0 0 1-3.32 2.66l.02.04Zm0 12.26v-4.36c2.2-.95 4.26-2.27 6.07-3.9.28 1.06.45 2.15.53 3.26-1 1.77-4.4 3.82-6.62 4.97l.02.03Zm-1.8-12.26a8.2 8.2 0 0 1-3.33-2.7 43.26 43.26 0 0 1 3.3-5l.02 7.7ZM16.66 29.4a30.16 30.16 0 0 0 6.43 4.1v4.2c-1.64-.7-3.1-1.84-4.21-3.29a11.52 11.52 0 0 1-2.22-5.01Zm8.24 8.3V33.5a29.68 29.68 0 0 0 6.43-4.1 11.37 11.37 0 0 1-2.2 5.04 10.53 10.53 0 0 1-4.23 3.28Z" fill="#2D3440"/>
-            </svg>
-            <span>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты<br> и добавки произведены из натурального сырья.</span>
-          </li>
-          <li class="benefit-four">
-            <svg class="benefit-four-image" aria-hidden="true" focusable="false" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="24" r="23" stroke="#2D3440" stroke-width="2"/>
-              <path d="M27.19 13.07a5.3 5.3 0 0 0-1.37-3.59A4.49 4.49 0 0 0 22.52 8c-1.24 0-2.42.53-3.3 1.48a5.3 5.3 0 0 0-1.36 3.59v14.75a7.69 7.69 0 0 0-1.07 8.38 7 7 0 0 0 2.17 2.6 6.14 6.14 0 0 0 6.25.62c1-.46 1.89-1.19 2.57-2.12a7.78 7.78 0 0 0 1.13-6.7 7.3 7.3 0 0 0-1.72-2.98V13.07Zm.17 19.72c0 .88-.2 1.75-.58 2.52a5.02 5.02 0 0 1-1.63 1.9 4.5 4.5 0 0 1-4.62.28 4.88 4.88 0 0 1-1.82-1.68 5.44 5.44 0 0 1-.47-5c.32-.8.83-1.51 1.47-2.05v-15.7c0-.8.3-1.58.82-2.15a2.7 2.7 0 0 1 2-.9c.74 0 1.45.33 1.98.9.53.57.82 1.35.82 2.16v15.5c.63.47 1.14 1.1 1.5 1.84.35.74.53 1.55.53 2.38Z" fill="#2D3440"/><path d="M23.53 29.64v-16.5c0-.27-.1-.52-.27-.71a.9.9 0 0 0-.65-.3.9.9 0 0 0-.66.3c-.17.19-.27.44-.27.71v16.5c-.62.24-1.14.7-1.48 1.32a3.25 3.25 0 0 0 .61 3.84c.5.46 1.14.71 1.8.71.65 0 1.29-.25 1.79-.7a3.25 3.25 0 0 0 .6-3.84 2.85 2.85 0 0 0-1.47-1.33ZM34.67 11.94H29.1v2.02h5.57v-2.02ZM34.67 15.97H29.1V18h5.57v-2.02ZM34.67 20H29.1v2.02h5.57V20ZM34.67 24.03H29.1v2.02h5.57v-2.02Z" fill="#2D3440"/>
-            </svg>
-            <span>Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</span>
-          </li>
-      </div>
-    </ul>
+          <h2 class="benefits-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+          <ul class="benefits-list">
+              <li class="benefit-one">
+                <svg class=" benefit-one-image" aria-hidden="true" focusable="false" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="24" r="23" stroke="#2D3440" stroke-width="2"/>
+                <path d="M24 8a8 8 0 0 0-7.94 7.06H16v15.89h16v-15.9h-.06A8 8 0 0 0 24 8Zm6.12 21.06H17.88V20.4a1.68 1.68 0 0 0 1.45.6c1.22 0 2-.68 2-1.54v-.81a.8.8 0 1 1 1.62 0v3.1a1.76 1.76 0 0 0 2 1.71 1.75 1.75 0 0 0 1.99-1.64v-2.08a1.27 1.27 0 1 1 2.53 0v.08a1.06 1.06 0 0 0 .63.84v8.47l.02-.06ZM22.59 38.59a1.41 1.41 0 0 0 2.82 0v-6.7H22.6v6.7Z" fill="#2D3440"/>
+              </svg>
+              <span>Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</span>
+            </li>
+              <li class="benefit-two">
+                <svg class="benefit-two-image" aria-hidden="true" focusable="false" width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24.5" cy="24" r="23" stroke="#2D3440" stroke-width="2"/><g clip-path="url(#a)">
+                  <path d="M35.25 18.29a12.1 12.1 0 0 0 .46-9.56 1 1 0 0 0-.34-.47 1.06 1.06 0 0 0-1.57.3c-1.32 2.28-4.16 5.96-6.24 6.13h-.1c-.95-.18-1.92-.28-2.9-.3-.98.02-1.95.12-2.91.3h-.07c-2.09-.16-4.97-3.84-6.3-6.13-.1-.18-.24-.33-.42-.43a1.07 1.07 0 0 0-1.18.1 1 1 0 0 0-.33.5 12 12 0 0 0 .4 9.55c-1.81.22-4.1.78-4.94 2.2a2.15 2.15 0 0 0 0 2.22c.24.4.6.74 1.02.97.43.22.92.32 1.4.28a7.57 7.57 0 0 0 2.52-.48c0 .54.04 1.09.14 1.62a34.44 34.44 0 0 0 1.82 5.24c.2.47.41 1 .53 1.32-.34.81-.61 1.65-.8 2.5a4.32 4.32 0 0 0 1.16 3.33c1.51 1.67 4.16 2.52 7.93 2.52 3.77 0 6.43-.85 7.93-2.52a4.39 4.39 0 0 0 1.17-3.33c-.2-.85-.46-1.69-.8-2.5l.53-1.32c.75-1.7 1.36-3.45 1.82-5.24.1-.53.15-1.08.14-1.62.78.3 1.6.46 2.44.48a2.54 2.54 0 0 0 2.43-1.26 2.15 2.15 0 0 0 0-2.2c-.82-1.38-3.12-1.98-4.94-2.2Zm-.99-6.69c.38 2.1 0 4.27-1.04 6.15a7.49 7.49 0 0 0-2.82-2.14c1.5-1.13 2.8-2.48 3.86-4Zm-19.47 0a16.96 16.96 0 0 0 3.85 4.03c-.73.3-1.4.74-1.96 1.27-.3.27-.58.57-.85.87a9.28 9.28 0 0 1-1.04-6.17Zm-4.1 10.13c-.1-.16-.06-.21 0-.25.24-.4 1.45-1 3.76-1.24-.12.3-.22.58-.31.89-1.36.67-3.17 1.1-3.45.6Zm22.44 3.02a33.3 33.3 0 0 1-1.69 4.84c-.27.62-.51 1.25-.72 1.88l-.06.32.11.28c.33.77.6 1.56.8 2.36a2.33 2.33 0 0 1-.67 1.73C30.15 37 28.44 38 24.54 38c-3.9 0-5.6-1.01-6.36-1.83-.45-.47-.69-1.09-.67-1.73.2-.8.48-1.6.8-2.36l.12-.28-.07-.32c-.2-.64-.43-1.27-.7-1.89-.7-1.58-1.28-3.2-1.71-4.87a7 7 0 0 1 2.2-6.4c1.57-1.53 5.13-1.88 6.37-1.89 1.24 0 4.73.35 6.39 1.9.88.81 1.55 1.82 1.93 2.93.4 1.11.49 2.3.29 3.46v.04Zm5.2-3.02c-.27.48-2.08.07-3.37-.6-.09-.3-.19-.59-.3-.89 2.29.23 3.48.85 3.71 1.24.05.04.07.09-.02.25h-.02Z" fill="#2D3440"/></g><defs><clipPath id="a"><path fill="#fff" transform="translate(8.5 8)" d="M0 0h32v32H0z"/></clipPath></defs>
+                </svg>
+                <span>Закупка ингредиентов производится только <br> у проверенных фермерских хозяйств, с которыми <br> нас связывает долговременное сотрудничество.</span>
+              </li>
+              <li class="benefit-three">
+                <svg class="benefit-three-image" aria-hidden="true" focusable="false" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="24" r="23" stroke="#2D3440" stroke-width="2"/>
+                  <path d="M33.32 26.49c-.4-9.08-8.31-17.87-8.66-18.25h-.05l-.1-.13-.12-.07h-.51L23.71 8h-.05l-.16.11-.1.1h-.04c-.36.41-8.27 9.2-8.69 18.28v1.24c.34 9.84 9.04 12.24 9.11 12.26h.45c.08 0 8.77-2.47 9.1-12.26v-1.24Zm-16.26-3.36a22.23 22.23 0 0 0 6.04 3.93v4.34c-2.21-1.15-5.62-3.2-6.62-5.01.08-1.1.26-2.2.55-3.26h.03Zm1.8-4.87a11.1 11.1 0 0 0 4.24 2.92v3.77c-2.02-.9-3.86-2.2-5.42-3.82.34-.98.74-1.94 1.18-2.87Zm11.5 2.87a17.3 17.3 0 0 1-5.43 3.82v-3.77c1.6-.62 3.03-1.62 4.2-2.92.46.92.86 1.86 1.22 2.83v.04Zm-5.43-1.97v-7.64a43.22 43.22 0 0 1 3.3 4.94 8.28 8.28 0 0 1-3.32 2.66l.02.04Zm0 12.26v-4.36c2.2-.95 4.26-2.27 6.07-3.9.28 1.06.45 2.15.53 3.26-1 1.77-4.4 3.82-6.62 4.97l.02.03Zm-1.8-12.26a8.2 8.2 0 0 1-3.33-2.7 43.26 43.26 0 0 1 3.3-5l.02 7.7ZM16.66 29.4a30.16 30.16 0 0 0 6.43 4.1v4.2c-1.64-.7-3.1-1.84-4.21-3.29a11.52 11.52 0 0 1-2.22-5.01Zm8.24 8.3V33.5a29.68 29.68 0 0 0 6.43-4.1 11.37 11.37 0 0 1-2.2 5.04 10.53 10.53 0 0 1-4.23 3.28Z" fill="#2D3440"/>
+                </svg>
+                <span>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты<br> и добавки произведены из натурального сырья.</span>
+              </li>
+              <li class="benefit-four">
+                <svg class="benefit-four-image" aria-hidden="true" focusable="false" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="24" r="23" stroke="#2D3440" stroke-width="2"/>
+                  <path d="M27.19 13.07a5.3 5.3 0 0 0-1.37-3.59A4.49 4.49 0 0 0 22.52 8c-1.24 0-2.42.53-3.3 1.48a5.3 5.3 0 0 0-1.36 3.59v14.75a7.69 7.69 0 0 0-1.07 8.38 7 7 0 0 0 2.17 2.6 6.14 6.14 0 0 0 6.25.62c1-.46 1.89-1.19 2.57-2.12a7.78 7.78 0 0 0 1.13-6.7 7.3 7.3 0 0 0-1.72-2.98V13.07Zm.17 19.72c0 .88-.2 1.75-.58 2.52a5.02 5.02 0 0 1-1.63 1.9 4.5 4.5 0 0 1-4.62.28 4.88 4.88 0 0 1-1.82-1.68 5.44 5.44 0 0 1-.47-5c.32-.8.83-1.51 1.47-2.05v-15.7c0-.8.3-1.58.82-2.15a2.7 2.7 0 0 1 2-.9c.74 0 1.45.33 1.98.9.53.57.82 1.35.82 2.16v15.5c.63.47 1.14 1.1 1.5 1.84.35.74.53 1.55.53 2.38Z" fill="#2D3440"/><path d="M23.53 29.64v-16.5c0-.27-.1-.52-.27-.71a.9.9 0 0 0-.65-.3.9.9 0 0 0-.66.3c-.17.19-.27.44-.27.71v16.5c-.62.24-1.14.7-1.48 1.32a3.25 3.25 0 0 0 .61 3.84c.5.46 1.14.71 1.8.71.65 0 1.29-.25 1.79-.7a3.25 3.25 0 0 0 .6-3.84 2.85 2.85 0 0 0-1.47-1.33ZM34.67 11.94H29.1v2.02h5.57v-2.02ZM34.67 15.97H29.1V18h5.57v-2.02ZM34.67 20H29.1v2.02h5.57V20ZM34.67 24.03H29.1v2.02h5.57v-2.02Z" fill="#2D3440"/>
+                </svg>
+                <span>Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</span>
+              </li>
+          </ul>
+       </div>
   </section>
   <section class="news">
     <article class="update">
@@ -331,12 +331,12 @@
     </article>
     <article class="subscribe">
       <div class="subscribe-container">
-      <p class="subscribe-description">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-      <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru/">
-        <input class="field" type="email" placeholder="email@example.com">
-        <button class="form-button button-subscribe" type="submit">Отправить</button>
+        <p class="subscribe-description">Подпишитесь на нашу сладкую рассылку и будьте всегда<br> в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+        <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru/">
+          <input class="field" type="email" placeholder="email@example.com">
+          <button class="form-button button-subscribe" type="submit">Отправить</button>
+        </form>
       </div>
-      </form>
     </article> 
   </section>
   <section class="delivery">
@@ -448,7 +448,7 @@
       </ul>
     </section>
     <section class="copyrights">
-      <img class="copyright-logo" src="image\logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии.">
+      <img class="copyright-logo" src="image/logo_htmlacademy.svg" width="93" height="27" alt="Логотип Академии.">
       <p class="copyright-text">Сделано в <a class="copyright-link" href="https://htmlacademy.ru/">.html academy</a> © 2021</p>
       </section>
   </div>
